# cisco-innovation-challenge

./: .gitignore  README.md  compose-ci.yml  compose-test.yml  compose.yml
.github/workflows/: ai-review.yml  test.yml
CML/: Dockerfile  README.md  api.py  pyproject.toml
CML/BGP-sample/: main.tf
NSO/: README.md  compose.yml  ncs.conf  nso.rest
PCA/: README.md  api.py  pyproject.toml
Tester/: Dockerfile  pyproject.toml  pytest.ini  test_cml.py  test_langchain.py  test_pca.py  test_webex.py
knowledge/: ctc-network-deploy.md  ctc-network-observability.md  ctc-network-op.md
langchain/: .gitignore  Dockerfile  README.md  api.py  load.py  main.py  pyproject.toml
langchain/base-knowledge/: ctc-network-op.md  target-device.md
webex/: Dockerfile  README.md  api.py  main.py  ngrok-startup.sh  ngrok.yml  pyproject.toml  webex.rest  webhook_request.json
