[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Tomoya Watanabe <tomoya.watanabe@ctc-g.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.2"
requests = "^2.32.3"
pytest-robotframework = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
