[tool.poetry]
name = "webex"
version = "0.1.0"
description = ""
authors = ["NOne"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
requests = "^2.32.3"
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
